--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -9,7 +9,10 @@
     justify-content: space-between;
 
     &__logo {
-        font-size: rem(25);
+        @include breakpoint-up(large) {
+            font-size: rem(32);
+        }
+        font-size: rem(26);
         font-weight: 800;
         color: var(--sec-text-color);
         cursor: pointer;
