--- a/app/scss/components/section-II.scss
+++ b/app/scss/components/section-II.scss
@@ -3,4 +3,15 @@
 @use '../util/mixins.scss' as *;
 
 
-// fhfffff
+.whoWeAre {
+    margin-top: rem(150);
+
+    .text-card {
+        display: flex;
+        flex-direction: column;
+
+        & h3 {
+            display: none;
+        }
+    }
+}
