--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -6,7 +6,7 @@ html {
 *, *::before, *::after {
     box-sizing: inherit;
     list-style: none;
-    outline: 1px solid red;
+    // outline: 1px solid red;
 }
 
 body {
